--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>©Satss GameShop</title>
+    <title>©Satss9</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -62,7 +62,7 @@
                 <div class="relative">
                     <div class="profile-container"></div> 
                 </div>
-                <h1 class="text-2xl font-bold mt-6 text-white drop-shadow-lg">Satss GameShop</h1>
+                <h1 class="text-2xl font-bold mt-6 text-white drop-shadow-lg">Satss9</h1>
                 <p class="text-white/80 text-center mt-2 font-medium">All Sosmed</p>
             </div>
 
@@ -128,7 +128,7 @@
         (function() {
             const footer = document.createElement('div');
             footer.className = 'mt-8 text-center fade-in stagger-6';
-            footer.innerHTML = `<p class="text-white/80 font-medium drop-shadow-lg">Created By <span class="text-green-400 font-bold">SatssGameShop</span></p>`;
+            footer.innerHTML = `<p class="text-white/80 font-medium drop-shadow-lg">Created By <span class="text-green-400 font-bold">Satss9</span></p>`;
             document.body.appendChild(footer);
         })();
 
