--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>©Satss9</title>
+    <title>Satss9 Profile</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -67,7 +67,7 @@
             </div>
 
             <div class="space-y-4 mb-8">
-                <a href="https://wa.me/6283822615363" class="whatsapp-btn fade-in stagger-2 flex items-center justify-center text-white font-semibold py-4 px-6 rounded-2xl shadow-lg hover:shadow-xl transition-all bg-gradient-to-r from-green-500 to-emerald-500">
+                <a href="https://wa.me/6285846153698" class="whatsapp-btn fade-in stagger-2 flex items-center justify-center text-white font-semibold py-4 px-6 rounded-2xl shadow-lg hover:shadow-xl transition-all bg-gradient-to-r from-green-500 to-emerald-500">
                     <i class="fab fa-whatsapp mr-3 text-xl"></i> WhatsApp
                 </a>
                 <a href="https://whatsapp.com/channel/0029Vb5mwud9sBI23qIQOK2q" class="whatsapp-btn fade-in stagger-3 flex items-center justify-center text-white font-semibold py-4 px-6 rounded-2xl shadow-lg hover:shadow-xl transition-all bg-gradient-to-r from-green-500 to-emerald-500">
