--- a/index.html
+++ b/index.html
@@ -67,8 +67,11 @@
             </div>
 
             <div class="space-y-4 mb-8">
-                <a href="https://wa.me/6285846153698" class="whatsapp-btn fade-in stagger-2 flex items-center justify-center text-white font-semibold py-4 px-6 rounded-2xl shadow-lg hover:shadow-xl transition-all bg-gradient-to-r from-green-500 to-emerald-500">
+                <a href="https://wa.me/6283822615363" class="whatsapp-btn fade-in stagger-2 flex items-center justify-center text-white font-semibold py-4 px-6 rounded-2xl shadow-lg hover:shadow-xl transition-all bg-gradient-to-r from-green-500 to-emerald-500">
                     <i class="fab fa-whatsapp mr-3 text-xl"></i> WhatsApp
+                </a>
+                <a href="https://wa.me/6285846153698" class="whatsapp-btn fade-in stagger-2 flex items-center justify-center text-white font-semibold py-4 px-6 rounded-2xl shadow-lg hover:shadow-xl transition-all bg-gradient-to-r from-green-500 to-emerald-500">
+                    <i class="fab fa-whatsapp mr-3 text-xl"></i> WhatsApp 2
                 </a>
                 <a href="https://whatsapp.com/channel/0029Vb5mwud9sBI23qIQOK2q" class="whatsapp-btn fade-in stagger-3 flex items-center justify-center text-white font-semibold py-4 px-6 rounded-2xl shadow-lg hover:shadow-xl transition-all bg-gradient-to-r from-green-500 to-emerald-500">
                     <i class="fab fa-whatsapp mr-3 text-xl"></i> Channel
